// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyValueList component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    role="list"
  >
    <div
      class="mocked-styled-1 el-key-value-list-wrap"
      role="listitem"
    >
      <div
        class="mocked-styled-0 el-key-value-icon-wrap"
      >
        user
      </div>
      <div
        class="el-flex-container el-flex-column"
      >
        <div
          class="el-text-base el-text-xs el-has-grey-text"
        >
          Name
        </div>
        <div
          class="el-text-base el-text-sm"
        >
          John Doe
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-1 el-key-value-list-wrap"
      role="listitem"
    >
      <div
        class="mocked-styled-0 el-key-value-icon-wrap"
      >
        email
      </div>
      <div
        class="el-flex-container el-flex-column"
      >
        <div
          class="el-text-base el-text-xs el-has-grey-text"
        >
          Email
        </div>
        <div
          class="el-text-base el-text-sm"
        >
          email@example.com
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-1 el-key-value-list-wrap"
      role="listitem"
    >
      <div
        class="mocked-styled-0 el-key-value-icon-wrap"
      >
        car
      </div>
      <div
        class="el-flex-container el-flex-column"
      >
        <div
          class="el-text-base el-text-xs el-has-grey-text"
        >
          Parking Spaces
        </div>
        <div
          class="el-text-base el-text-sm"
        >
          2
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-1 el-key-value-list-wrap"
      role="listitem"
    >
      <div
        class="mocked-styled-0 el-key-value-icon-wrap"
      >
        calendar
      </div>
      <div
        class="el-flex-container el-flex-column"
      >
        <div
          class="el-text-base el-text-xs el-has-grey-text"
        >
          Date Signed Up
        </div>
        <div
          class="el-text-base el-text-sm"
        >
          20th September 2023
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-1 el-key-value-list-wrap"
      role="listitem"
    >
      <div
        class="mocked-styled-0 el-key-value-icon-wrap"
      >
        property
      </div>
      <div
        class="el-flex-container el-flex-column"
      >
        <div
          class="el-text-base el-text-xs el-has-grey-text el-text-ellipsis"
        >
          Address
        </div>
        <div
          class="el-text-base el-text-sm el-text-ellipsis"
        >
          I added a textEllipsis prop to this one to show how it works. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-1 el-key-value-list-wrap"
      role="listitem"
    >
      <div
        class="mocked-styled-0 el-key-value-icon-wrap"
      >
        edit
      </div>
      <div
        class="el-flex-container el-flex-column"
      >
        <div
          class="el-text-base el-text-xs el-has-grey-text"
        >
          Description
        </div>
        <div
          class="el-text-base el-text-sm"
        >
          This one I just allowed the text to wrap. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`KeyValueList component > should match a snapshot for a grid 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-grid"
  >
    <div
      class="mocked-styled-4 el-col-half"
    >
      <div
        class="el-flex-container"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          user
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Name
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            John Doe
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-4 el-col-half"
    >
      <div
        class="el-flex-container"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          email
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Email
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            email@example.com
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-4 el-col-half"
    >
      <div
        class="el-flex-container"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          car
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Parking Spaces
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            2
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-4 el-col-half"
    >
      <div
        class="el-flex-container"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          calendar
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Date Signed Up
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            20th September 2023
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-3 el-col"
    >
      <div
        class="el-flex-container"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          property
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text el-text-ellipsis"
          >
            Address
          </div>
          <div
            class="el-text-base el-text-sm el-text-ellipsis"
          >
            I added a textEllipsis prop to this one to show how it works. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
          </div>
        </div>
      </div>
    </div>
    <div
      class="mocked-styled-3 el-col"
    >
      <div
        class="el-flex-container"
      >
        <div
          class="mocked-styled-0 el-key-value-icon-wrap"
        >
          edit
        </div>
        <div
          class="el-flex-container el-flex-column"
        >
          <div
            class="el-text-base el-text-xs el-has-grey-text"
          >
            Description
          </div>
          <div
            class="el-text-base el-text-sm"
          >
            This one I just allowed the text to wrap. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolorem laudantium, repellat, aut tenetur enim veritatis debitis nostrum iste fugit quas delectus repellendus iusto ratione esse. Ab rem voluptate veritatis.
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
